# Bisecting_Log

./: .gitignore  LICENSE  README.md  bkm-log  bkm.ipynb  bot.py
TUI/: Cargo.toml
TUI/src/: filter.rs  io.rs  main.rs  state.rs  theme.rs
app/: __init__.py  bkm.ipynb  bkm.py  clustering.py  custom_bkm.py  decoder.py  progress.py  requirements.txt  run.py
app/core/: __init__.py  bot.py  cluster.py  custom_bkm.py  decoder.py  embeddings.py  features.py  progress.py
outputs/: sample.csv  sample.csv.txt  sample.parquet  sample.txt
tui/: Cargo.toml
tui/src/: cli.rs  data.rs  detail.rs  filter.rs  float.rs  gauge.rs  loading.rs  main.rs  process.rs  quit.rs  sort.rs  state.rs  terminal_check.rs  theme.rs
