[package]
name = "Rust_tui"
version = "0.1.0"
edition = "2024"

[features]
default = []       # tidak aktifkan tips (mirip linutil default tanpa tips)

[dependencies]
clap = { version = "4.5.20", features = ["derive", "std", "help", "usage"], default-features = false }
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.27.0"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"], default-features = false }
unicode-width = { version = "0.2.0", default-features = false }

