[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.29.0"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14.0"
unicode-width = { version = "0.2.0", default-features = false }
anyhow = "1.0.100"
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
serde_json = "1.0"